--- a/mockup.html
+++ b/mockup.html
@@ -65,20 +65,90 @@
                 </div>
             </div>
             <div class="cell">
-                <h4>Product list item</h4>
-                <div class="product-list-item"></div>
+                <h4>Product list item (mobile)</h4>
+                <div class="product-list-item-mobile">
+                    <div class="product-list-item-mobile-cell">
+                        <img src="product.PNG"/>
+                    </div>
+                    <div class="product-list-item-mobile-cell">
+                        <div class="product-list-item-mobile-header">
+                            Headset
+                        </div>
+                        <div class="product-list-item-mobile-specs">5 in stock</div>
+                        <div class="product-list-item-mobile-specs">€ 100</div>
+                        <div class="product-list-item-mobile-buttons">
+                            <button class="default-button w50">Wish list</button>
+                            <button class="default-button w50">Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-list-item-mobile">
+                    <div class="product-list-item-mobile-cell">
+                        <img src="product.PNG"/>
+                    </div>
+                    <div class="product-list-item-mobile-cell">
+                        <div class="product-list-item-mobile-header">
+                            Headset
+                        </div>
+                        <div class="product-list-item-mobile-specs">5 in stock</div>
+                        <div class="product-list-item-mobile-specs">€ 100,00</div>
+                        <div class="product-list-item-mobile-buttons">
+                            <button class="default-button w50">Wish list</button>
+                            <button class="default-button w50">Cart</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+        </div>
+        <div>
+            <h4>Product list item (wide screen + tablet)</h4>
+            <div class="product-list-item-wide">
+                <div>
+                    <img src="product.PNG"/>
+                </div>
+                <div class="product-list-item-wide-specs">
+                    <div class="center">
+                        <h1>Headset</h1>
+                    </div>
+                    <div>
+                        <h1>5 in stock</h1>
+                    </div>
+                    <div>
+                        <h1>€ 100,00</h1>
+                    </div>
+                    <div>
+                        <button class="default-button w50">Wish list</button>
+                        <button class="default-button w50">Cart</button>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list-item-wide">
+                <div>
+                    <img src="product.PNG"/>
+                </div>
+                <div class="product-list-item-wide-specs">
+                    <div class="center">
+                        <h1>Headset</h1>
+                    </div>
+                    <div>
+                        <h1>5 in stock</h1>
+                    </div>
+                    <div>
+                        <h1>€ 100,00</h1>
+                    </div>
+                    <div>
+                        <button class="default-button w50">Wish list</button>
+                        <button class="default-button w50">Cart</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </article>
 <footer>
+    <div class="footer-filler"></div>
+    <div class="footer-filler"></div>
+    <div class="footer-filler"></div>
     <div class="footer">
         <div class="center content-center padding_05">
             hi I'm a footer (Text color: #385736)
