--- a/mockup.html
+++ b/mockup.html
@@ -14,6 +14,26 @@
         </div>
     </div>
 </header>
+<nav>
+    <div class="center">
+        <button class="nav-button nav-active">Home</button>
+        <button class="nav-button">Mijn winkelmandje</button>
+        <button class="nav-button">Mijn wenslijst</button>
+        <button class="nav-button">Profiel</button>
+        <button class="nav-button">faq</button>
+        <button class="nav-button">Contact</button>
+        <button class="nav-button">Over Prularia</button>
+        <input class="nav-input" type="text" placeholder="Zoek op productnaam">
+        <select class="nav-select">
+            <option>Zoek op categorie</option>
+            <option>Categorie 1</option>
+            <option>Categorie 2</option>
+            <option>Categorie 3</option>
+            <option>Categorie 4</option>
+        </select>
+
+    </div>
+</nav>
 <article>
     <div class="center">
         background-color: white;
